fixed mobile footer spacing

--- a/footer.css
+++ b/footer.css
@@ -88,7 +88,7 @@ footer {
 
 @media only screen and (max-device-width: 600px) {
   footer {
-    height: 740px;
+    height: 715px;
     margin-top: 35px;
   }
   .footer-right {
